Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -794,7 +794,59 @@ ENDMODULE.
 ```
 </br>
 
-**3) 결과 확인**
+**3) 모듈 `PBO` 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03003_O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100'.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module STATUS_0200 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0200 OUTPUT.
+ SET PF-STATUS 'S200'.
+* SET TITLEBAR 'xxx'.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module STATUS_0300 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0300 OUTPUT.
+ SET PF-STATUS 'S300'.
+* SET TITLEBAR 'xxx'.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module STATUS_0400 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0400 OUTPUT.
+ SET PF-STATUS 'S400'.
+* SET TITLEBAR 'xxx'.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module clear_ok_code OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE clear_ok_code OUTPUT.
+  CLEAR OK_CODE.
+ENDMODULE.
+```
+</br>
+
+**4) 결과 확인**
 - `100` 에서 버튼 클릭시 `300` 으로 이동
 - `300` 에서 뒤로가기 하면 `LEAVE SCREEN` 때문에 Next Dynpro인 `400` 으로 이동
 - `400` 에서 뒤로가기 하면 `LEAVE TO SCREEN 0` 때문에 가장 최근 CALL SCREEN 호출자인 100의 Next Dynpro인 `200` 으로 이동
