Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -2,5 +2,12 @@
 </br>
 
 ### < ABAP Dynpro CALL SCREEN과 Screen Stack 흐름 >
+- OK_CODE 초기화 코드 꼭 넣어줘야 함 ( 보통 `PBO` 에서)
+```abap
+MODULE clear_ok_code OUTPUT.
+  CLEAR: OK_CODE.
+ENDMODULE.
+```
+
 <img width="584" height="323" alt="image" src="https://github.com/user-attachments/assets/2fc3f75c-acfe-4c79-82c7-fd88c67b058c" />
 
