Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -2,7 +2,8 @@
 </br>
 
 ### < ABAP Dynpro CALL SCREEN과 Screen Stack 흐름 >
-- OK_CODE 초기화 코드 꼭 넣어줘야 함 ( 보통 `PBO` 에서)
+- **`LEAVE TO SCREEN 0`** 같은 화면 전환 명령은 **`PAI`** 에서만
+- **OK_CODE 초기화** 코드 꼭 넣어줘야 함 ( 보통 **`PBO`** 에서)
 ```abap
 MODULE clear_ok_code OUTPUT.
   CLEAR: OK_CODE.
