Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -29,7 +29,7 @@ ENDMODULE.
 </br>
 </br>
 
-**1) 각 스크린의 `Layout`**
+**1) 각 스크린의 `Layout` 설정**
 - `Screen 100`
 <img width="303" height="183" alt="image" src="https://github.com/user-attachments/assets/3143132f-d12f-40c8-8247-f67a222bd64e" />
 </br>
@@ -39,3 +39,23 @@ ENDMODULE.
 <img width="321" height="281" alt="image" src="https://github.com/user-attachments/assets/439391c4-5f02-4fbd-9386-15c2c4e57460" />
 </br>
 </br>
+</br>
+
+**2) `TOP` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include MZPRACTICE03B03_TOP                      - Module Pool      SAPMZPRACTICE03B03
+*&---------------------------------------------------------------------*
+PROGRAM SAPMZPRACTICE03B03.
+
+TABLES: ZSCARRFLIGHT_B03.
+
+DATA: OK_CODE TYPE sy-ucomm,
+      gv_carrid TYPE ZSCARRFLIGHT_B03-CARRID,
+      gv_connid TYPE ZSCARRFLIGHT_B03-CONNID,
+      gv_fldate TYPE ZSCARRFLIGHT_B03-FLDATE,
+      gs_data TYPE ZSCARRFLIGHT_B03.
+```
+</br>
+
+**2) `PBO` 모듈 생성**
