Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -58,4 +58,65 @@ DATA: OK_CODE TYPE sy-ucomm,
 ```
 </br>
 
-**2) `PBO` 모듈 생성**
+**3) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZPRACTICE03B03_O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+* SET PF-STATUS 'xxxxxxxx'.
+* SET TITLEBAR 'xxx'.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module STATUS_0200 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0200 OUTPUT.
+  PERFORM get_data USING gv_carrid gv_connid gv_fldate
+                   CHANGING gs_data.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module clear_ok_code OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE clear_ok_code OUTPUT.
+  CLEAR: OK_CODE.
+ENDMODULE.
+```
+</br>
+
+**3) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZPRACTICE03B03_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+  gv_carrid = ZSCARRFLIGHT_B03-CARRID.
+  gv_connid = ZSCARRFLIGHT_B03-CONNID.
+  gv_fldate = ZSCARRFLIGHT_B03-FLDATE.
+
+  CALL SCREEN 200.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0200  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0200 INPUT.
+  IF OK_CODE = 'MOVE'.
+    LEAVE TO SCREEN 0.
+  ENDIF.
+ENDMODULE.
+```
