--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -23,7 +23,7 @@ ENDMODULE.
 ## < 실습 코드 >
 
 ### 실습 1
-- 문제
+- 문제 ( ABAP Dynpro CALL SCREEN과 Screen Stack 흐름 )
 
 <img width="436" height="226" alt="image" src="https://github.com/user-attachments/assets/9ce0443e-acaf-408a-a37a-e43a75d932fa" />
 </br>
