Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -58,7 +58,30 @@ DATA: OK_CODE TYPE sy-ucomm,
 ```
 </br>
 
-**3) `PBO` 모듈 생성**
+**3) `F01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZPRACTICE03B03_F01
+*&---------------------------------------------------------------------*
+
+FORM get_data USING pa_carrid pa_connid pa_fldate
+              CHANGING gt_data.
+
+  SELECT SINGLE A~CARRID, A~CARRNAME, A~CURRCODE, B~CONNID, B~FLDATE, B~PRICE, B~CURRENCY, B~PLANETYPE, B~SEATSMAX, B~SEATSOCC
+    INTO @gs_data
+    FROM scarr AS A INNER JOIN sflight AS B
+      ON A~carrid = B~carrid
+    WHERE B~carrid = @pa_carrid
+      AND B~connid = @pa_connid
+      AND B~fldate = @pa_fldate.
+  MOVE-CORRESPONDING gs_data TO ZSCARRFLIGHT_B03.
+
+ENDFORM.
+```
+</br>
+
+
+**4) `PBO` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZPRACTICE03B03_O01
@@ -92,7 +115,7 @@ ENDMODULE.
 ```
 </br>
 
-**3) `PAI` 모듈 생성**
+**5) `PAI` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZPRACTICE03B03_I01
