--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -239,6 +239,14 @@ LEAVE TO SCREEN 0.
 </br>
 </br>
 
+### 5) LEAVE PROGRAM
+- 프로그램 전체 종료
+```abap
+LEAVE PROGRAM.
+```
+</br>
+</br>
+
 ---
 
 </br>
