Update 프로그래밍 전용 웹 스크린 개발(12.12).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.12).md
@@ -346,6 +346,7 @@ ENDMODULE.
 </br>
 
 **9) `PBO` 모듈 구현**
+- 시스템변수 : `SY-DATUM` = 오늘 날짜, `SY-UZEIT` = 현재 시간, `SY-UNAME` = 로그인 사용자 ID
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZB03002_O01
