Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -20,6 +20,25 @@ ENDMODULE.
 
 </br>
 
+## < ABAP 문법 >  
+
+### 1) SET CURSOR FIELD 
+- `<field_name>` : 화면(Screen)에 존재하는 필드 이름
+- 특정 화면 필드에 포커스를 이동시킴
+```abap
+SET CURSOR FIELD <field_name>.
+```
+```abap
+SET CURSOR FIELD 'SDYN_CONN-CONNID'.
+```
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
 
 ### 실습 1
