Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -18,21 +18,9 @@ ENDMODULE.
 
 ---
 
-
 </br>
 
 ## < 사용자 인터페이스(UI) 구성 >
-
-
-</br>
-</br>
-
-
----
-
-</br>
-
-## < ABAP 문법 >  
 </br>
 
 ### 1) SET CURSOR FIELD 
@@ -44,6 +32,13 @@ SET CURSOR FIELD <field_name>.
 ```abap
 SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 ```
+
+<img width="462" height="304" alt="image" src="https://github.com/user-attachments/assets/75fa9c97-ee46-4f0a-845d-5fd0105b82fa" />
+</br>
+</br>
+
+<img width="423" height="303" alt="image" src="https://github.com/user-attachments/assets/ea8a1738-c120-4564-a8df-d43f12b70b24" />
+
 
 </br>
 </br>
