Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -20,7 +20,7 @@ ENDMODULE.
 
 </br>
 
-## < 사용자 인터페이스(UI) 구성 >
+## < 사용자 인터페이스(UI) 구성 기능 >
 </br>
 
 ### 1) SET CURSOR FIELD 
@@ -39,8 +39,17 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 </br>
 
 <img width="423" height="303" alt="image" src="https://github.com/user-attachments/assets/ea8a1738-c120-4564-a8df-d43f12b70b24" />
+</br>
+</br>
+</br>
+</br>
 
-
+### 2) Function Key / Function type
+**2-1) Function Type**
+- 종류: NORMAL / EXIT / TABSTRIP CTRL
+  
+  - 기본값: NORMAL
+- Function Type을 비워두면 NORMAL로 처리됨
 </br>
 </br>
 
