--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -46,10 +46,10 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 
 ### 2) Function Key / Function type
 **2-1) Function Type**
-- 종류: NORMAL / EXIT / TABSTRIP CTRL
+- 종류: `NORMAL / EXIT / TABSTRIP CTRL`
   
   - 기본값: NORMAL
-- Function Type을 비워두면 NORMAL로 처리됨
+- Function Type을 비워두면 `NORMAL` 로 처리됨
 </br>
 </br>
 
