Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -51,6 +51,20 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
   - 기본값: NORMAL
 - Function Type을 비워두면 `NORMAL` 로 처리됨
 </br>
+
+- `PF-STATUS` 에서 더블클릭시 function key 및 function code 지정 가능
+  
+<img width="581" height="216" alt="image" src="https://github.com/user-attachments/assets/9f6448b4-e07b-4a84-bbc1-b4de4aa160c8" />
+</br>
+</br>
+
+- `function type` 에 따라 저기에 들어가는 내용이 달라짐
+<img width="656" height="123" alt="image" src="https://github.com/user-attachments/assets/9c6e14cc-89de-4fd6-84fd-09bcd9beb981" />
+
+
+
+
+</br>
 </br>
 
 ---
