--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -60,8 +60,10 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 - `function type` 에 따라 저기에 들어가는 내용이 달라짐
 <img width="656" height="123" alt="image" src="https://github.com/user-attachments/assets/9c6e14cc-89de-4fd6-84fd-09bcd9beb981" />
 
+</br>
+</br>
 
-
+<img width="577" height="387" alt="image" src="https://github.com/user-attachments/assets/8c638b9d-3e57-4e2d-a325-b5c2e15e1f18" />
 
 </br>
 </br>
