Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -58,11 +58,14 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 </br>
 
 - `function type` 에 따라 저기에 들어가는 내용이 달라짐
+  
 <img width="656" height="123" alt="image" src="https://github.com/user-attachments/assets/9c6e14cc-89de-4fd6-84fd-09bcd9beb981" />
 
 </br>
 </br>
 
+- `PF-STATUS` 를 통한 펑션코드와 속성 설정 예시
+  
 <img width="577" height="387" alt="image" src="https://github.com/user-attachments/assets/8c638b9d-3e57-4e2d-a325-b5c2e15e1f18" />
 
 </br>
