Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -44,7 +44,7 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 </br>
 </br>
 
-### 2) Function Key / Function type
+### 2) Function Key / Function type ( PF-STATUS - PBO에서 설정 )
 **2-1) Function Type**
 - 종류: `NORMAL / EXIT / TABSTRIP CTRL`
   - 기본값: NORMAL
@@ -67,6 +67,15 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 - `PF-STATUS` 를 통한 펑션코드와 속성 설정 예시
   
 <img width="577" height="387" alt="image" src="https://github.com/user-attachments/assets/8c638b9d-3e57-4e2d-a325-b5c2e15e1f18" />
+</br>
+</br>
+</br>
+</br>
+
+### 3) Titlebar ( TITLEBAR - PBO에서 설정 )
+- `All Title` 선택 시 모든 스크린에 동일 적용
+
+<img width="605" height="148" alt="image" src="https://github.com/user-attachments/assets/ab7604b0-4567-4dc4-980a-e714ae96d91f" />
 
 </br>
 </br>
