Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -76,7 +76,13 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 - `All Title` 선택 시 모든 스크린에 동일 적용
 
 <img width="605" height="148" alt="image" src="https://github.com/user-attachments/assets/ab7604b0-4567-4dc4-980a-e714ae96d91f" />
+</br>
+</br>
+</br>
+</br>
 
+### 4) PF-STATUS 및 Dialog 스크린 예제
+**1) 각 스크린 코드에서 모듈 생성**
 </br>
 </br>
 
