Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -83,6 +83,34 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 
 ### 4) PF-STATUS 및 Dialog 스크린 예제
 **1) 각 스크린 코드에서 모듈 생성**
+- CLEAR_OK_CODE. 모듈을 전부 선언해주어 OK_CODE를 클리어 시킴.
+- 100 스크린
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE CLEAR_OK_CODE.
+*
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+```
+- 110 스크린
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0110.
+ MODULE CLEAR_OK_CODE.
+*
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0110.
+```
+- 200 스크린
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0200.
+ MODULE CLEAR_OK_CODE.
+*
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+```
 </br>
 </br>
 
