Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -124,6 +124,51 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
+**2) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03004_O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100' WITH sy-dynnr.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module CLEAR_OK_CODE OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE clear_ok_code OUTPUT.
+  CLEAR: OK_CODE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module STATUS_0200 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0200 OUTPUT.
+ SET PF-STATUS 'S200'.
+ SET TITLEBAR 'T100' WITH sy-dynnr.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module STATUS_0110 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0110 OUTPUT.
+ SET PF-STATUS 'S110'.
+ SET TITLEBAR 'T100' WITH sy-dynnr.
+ENDMODULE.
+```
+
+</br>
+</br>
+
 ---
 
 </br>
