Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -125,6 +125,11 @@ PROCESS AFTER INPUT.
 </br>
 
 **2) `PAI` 모듈 생성**
+
+<img width="616" height="286" alt="image" src="https://github.com/user-attachments/assets/2273da92-2d35-4198-8c4e-5bcb08e15c6d" />
+</br>
+</br>
+
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZB03004_O01
