Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -124,12 +124,23 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
-**2) `PAI` 모듈 생성**
+**2) `100 Screen` PF-STATUS, TITLEBAR 생성**
 
 <img width="616" height="286" alt="image" src="https://github.com/user-attachments/assets/2273da92-2d35-4198-8c4e-5bcb08e15c6d" />
 </br>
 </br>
 
+<img width="648" height="312" alt="image" src="https://github.com/user-attachments/assets/0e476e6d-c8a1-492f-b5dc-b0c90c7621cc" />
+</br>
+</br>
+
+<img width="583" height="140" alt="image" src="https://github.com/user-attachments/assets/c1f8d966-6167-410d-bf12-f8bb4ec705be" />
+</br>
+</br>
+</br>
+</br>
+
+**2) `100 Screen` PF-STATUS, TITLEBAR 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZB03004_O01
@@ -170,6 +181,10 @@ MODULE status_0110 OUTPUT.
  SET TITLEBAR 'T100' WITH sy-dynnr.
 ENDMODULE.
 ```
+</br>
+</br>
+
+**2) `PBO` 모듈 생성**
 
 </br>
 </br>
