Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -138,9 +138,15 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 </br>
+
+**3) `110 Screen` PF-STATUS 생성 (Dialog)**
+- 생성할 때 `Normal` 대신 `Dialog Box` 선택
+<img width="514" height="327" alt="image" src="https://github.com/user-attachments/assets/a07132ec-45b0-4431-8018-3930f08a6824" />
+</br>
 </br>
 
-**2) `100 Screen` PF-STATUS, TITLEBAR 생성**
+<img width="692" height="335" alt="image" src="https://github.com/user-attachments/assets/dddd6815-ae4b-478f-ab33-00747919ed0d" />
+
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZB03004_O01
