Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -125,6 +125,14 @@ PROCESS AFTER INPUT.
 </br>
 
 **2) `100 Screen` PF-STATUS, TITLEBAR 생성**
+- `Application Toolbar` 설정
+<img width="688" height="283" alt="image" src="https://github.com/user-attachments/assets/6256a641-bea8-412f-8963-af18ed670eae" />
+</br>
+</br>
+
+<img width="702" height="239" alt="image" src="https://github.com/user-attachments/assets/e2f6a8e3-2bcf-4d7a-83d1-e09d127d845f" />
+</br>
+</br>
 
 <img width="616" height="286" alt="image" src="https://github.com/user-attachments/assets/2273da92-2d35-4198-8c4e-5bcb08e15c6d" />
 </br>
@@ -134,7 +142,14 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
+- `TITLEBAR` 생성
+- `&1` 이용해 변수 넣기
 <img width="583" height="140" alt="image" src="https://github.com/user-attachments/assets/c1f8d966-6167-410d-bf12-f8bb4ec705be" />
+</br>
+</br>
+
+<img width="386" height="177" alt="image" src="https://github.com/user-attachments/assets/9a38a8ad-5c66-4096-8263-4f49c3ab4c0b" />
+
 </br>
 </br>
 </br>
