Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -138,6 +138,12 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
+<img width="341" height="169" alt="image" src="https://github.com/user-attachments/assets/eafc8069-42b9-41ea-9101-9f3b4ae584b8" />
+</br>
+</br>
+
+- `Function Keys` 설정
+
 <img width="648" height="312" alt="image" src="https://github.com/user-attachments/assets/0e476e6d-c8a1-492f-b5dc-b0c90c7621cc" />
 </br>
 </br>
