Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -123,8 +123,19 @@ PROCESS AFTER INPUT.
 ```
 </br>
 </br>
+</br>
 
 **2) `100 Screen` PF-STATUS, TITLEBAR 생성**
+- `Menu Bar` 설정
+  
+<img width="630" height="331" alt="image" src="https://github.com/user-attachments/assets/8bfe8db3-3162-4493-8349-baa50eb07cdc" />
+</br>
+</br>
+
+<img width="490" height="207" alt="image" src="https://github.com/user-attachments/assets/8df34555-8d7b-44b8-92ae-acf189e84b3d" />
+</br>
+</br>
+
 - `Application Toolbar` 설정
 <img width="688" height="283" alt="image" src="https://github.com/user-attachments/assets/6256a641-bea8-412f-8963-af18ed670eae" />
 </br>
@@ -156,6 +167,7 @@ PROCESS AFTER INPUT.
 
 <img width="386" height="177" alt="image" src="https://github.com/user-attachments/assets/9a38a8ad-5c66-4096-8263-4f49c3ab4c0b" />
 
+</br>
 </br>
 </br>
 </br>
