--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -178,8 +178,20 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
+- `Function Keys` 설정
+  
 <img width="692" height="335" alt="image" src="https://github.com/user-attachments/assets/dddd6815-ae4b-478f-ab33-00747919ed0d" />
+</br>
+</br>
 
+- `Layout` 설정
+<img width="543" height="349" alt="image" src="https://github.com/user-attachments/assets/9ed62e47-491d-45f0-b27b-ce749cc0e054" />
+</br>
+</br>
+</br>
+</br>
+
+**4) `PBO` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZB03004_O01
@@ -222,9 +234,54 @@ ENDMODULE.
 ```
 </br>
 </br>
+</br>
 
-**2) `PBO` 모듈 생성**
-
+**5) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03004_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT' OR 'CANCEL'.
+      LEAVE PROGRAM.
+    WHEN 'MOVE'.
+      SET SCREEN 200.
+      LEAVE SCREEN.
+      " LEAVE TO SCREEN 200. 과 동일
+    WHEN 'REMARK'.
+*      MESSAGE 'Remark 메뉴 선택' TYPE 'I'.
+      CALL SCREEN 110
+      STARTING AT 5 5
+      ENDING AT 50 10.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0110  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0110 INPUT.
+  CASE OK_CODE.
+    WHEN 'OK'.
+      MESSAGE 'OK 클릭' TYPE 'I'.
+    WHEN 'CLOSE'.
+      MESSAGE 'CLOSE 클릭' TYPE 'I'.
+    WHEN 'DISP'.
+      MESSAGE 'DISP 클릭' TYPE 'I'.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
 </br>
 </br>
 
