Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -127,7 +127,8 @@ PROCESS AFTER INPUT.
 
 **2) `100 Screen` PF-STATUS, TITLEBAR 생성**
 - `Menu Bar` 설정
-  
+- 최대 3레벨, 최대 15개까지 가능
+
 <img width="630" height="331" alt="image" src="https://github.com/user-attachments/assets/8bfe8db3-3162-4493-8349-baa50eb07cdc" />
 </br>
 </br>
@@ -161,6 +162,7 @@ PROCESS AFTER INPUT.
 
 - `TITLEBAR` 생성
 - `&1` 이용해 변수 넣기
+  
 <img width="583" height="140" alt="image" src="https://github.com/user-attachments/assets/c1f8d966-6167-410d-bf12-f8bb4ec705be" />
 </br>
 </br>
@@ -412,3 +414,7 @@ MODULE user_command_0200 INPUT.
   ENDIF.
 ENDMODULE.
 ```
+</br>
+</br>
+
+### 실습 2
