Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -180,7 +180,7 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
-- `Function Keys` 설정
+- `Application Toolbar` 설정
   
 <img width="692" height="335" alt="image" src="https://github.com/user-attachments/assets/dddd6815-ae4b-478f-ab33-00747919ed0d" />
 </br>
