Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -418,3 +418,166 @@ ENDMODULE.
 </br>
 
 ### 실습 2
+- 문제 ( 버튼과 Application Toolbar 사용 )
+- 전에 했던 실습해서 추가구현
+
+<img width="489" height="253" alt="image" src="https://github.com/user-attachments/assets/53959b85-e2fc-4d5b-b28b-b7d46701d9fd" />
+</br>
+</br>
+
+**1) 각 스크린 코드에서 모듈 생성**
+- `Screen 100`
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE CLEAR_OK_CODE.
+*
+PROCESS AFTER INPUT.
+  MODULE CHECK_SFLIGHT.
+  MODULE USER_COMMAND_0100.
+```
+- `Screen 150`
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0150.
+ MODULE CLEAR_OK_CODE.
+*
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0150.
+```
+</br>
+</br>
+
+**2) `100 Screen` PF-STATUS 생성**
+
+<img width="536" height="225" alt="image" src="https://github.com/user-attachments/assets/00345637-c4ad-41cf-8718-80b9567ee07c" />
+
+</br>
+</br>
+
+**3) 각 스크린 `Layout` 설정**
+- `Screen 100`
+  
+<img width="540" height="409" alt="image" src="https://github.com/user-attachments/assets/9414ea76-85b5-4a67-9b88-f2355060bf3f" />
+</br>
+</br>
+
+- `Screen 150`
+  
+<img width="366" height="274" alt="image" src="https://github.com/user-attachments/assets/98b72890-c515-45ea-9659-725361985447" />
+</br>
+</br>
+
+**4) `PBO` 모듈 수정**
+- `OK_CODE` 초기화 코드 추가됨
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION2_O01
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+
+  SET PF-STATUS 'S100'.
+  IF gv_button = 1.
+    IF gv_subrc <> 0.
+      CLEAR SDYN_CONN.
+      gv_subrc = 0.
+    ELSE.
+      MOVE-CORRESPONDING gs_data TO SDYN_CONN.
+    ENDIF.
+  ELSE.
+    gv_button = 0.
+  ENDIF.
+
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module CLEAR_OK_CODE OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE clear_ok_code OUTPUT.
+  CLEAR: OK_CODE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module STATUS_0150 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0150 OUTPUT.
+ SET PF-STATUS 'S150'.
+ SET TITLEBAR 'xxx'.
+ENDMODULE.
+```
+</br>
+</br>
+
+**5) `PAI` 모듈 수정**
+- exit_button = 'T'` 일 때의 if문 추가
+- `exit_button` 초기화 코드 추가
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZBC410_SOLUTION_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+
+  IF exit_button = 'X'.
+    LEAVE TO SCREEN 0.
+  ELSEIF exit_button = 'T'.
+    CALL SCREEN 150
+    STARTING AT 5 5
+    ENDING AT 50 10.
+    CLEAR: exit_button.
+  ENDIF.
+
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+*&      Module  CHECK_SFLIGHT  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE check_sflight INPUT.
+
+  IF OK_CODE = 'PUSH'.
+    gv_button = 1.
+
+    SELECT SINGLE * FROM sflight
+      INTO CORRESPONDING FIELDS OF gs_data
+      WHERE carrid = SDYN_CONN-carrid
+        AND connid = SDYN_CONN-connid
+        AND fldate = SDYN_CONN-fldate.
+
+    IF sy-subrc <> 0.
+      gv_subrc = 4.
+      message text-007 TYPE 'I'.
+    ENDIF.
+  ENDIF.
+
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0150  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0150 INPUT.
+  IF OK_CODE = 'BTN01'.
+    LEAVE TO SCREEN 0.
+  ENDIF.
+ENDMODULE.
+```
+</br>
+</br>
+
+**6) 결과확인**
+
+<img width="531" height="375" alt="image" src="https://github.com/user-attachments/assets/ae634ba6-75e7-4a91-bd2a-c6e9cdb1094b" />
+</br>
+</br>
+
+<img width="534" height="376" alt="image" src="https://github.com/user-attachments/assets/50a3e05b-2c85-4084-a8ca-3fd02f4e4602" />
+</br>
+</br>
