Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -127,7 +127,7 @@ PROCESS AFTER INPUT.
 
 **2) `100 Screen` PF-STATUS, TITLEBAR 생성**
 - `Menu Bar` 설정
-- 최대 3레벨, 최대 15개까지 가능
+- **최대 3레벨, 최대 15개까지 가능**
 
 <img width="630" height="331" alt="image" src="https://github.com/user-attachments/assets/8bfe8db3-3162-4493-8349-baa50eb07cdc" />
 </br>
@@ -193,7 +193,22 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
-**4) `PBO` 모듈 생성**
+**4) 각 스크린 `Layout` 설정**
+- 110 스크린
+
+<img width="467" height="300" alt="image" src="https://github.com/user-attachments/assets/7fe97864-cebd-44f4-a018-bd8a78d04ea7" />
+</br>
+</br>
+
+- 200 스크린
+  
+<img width="452" height="306" alt="image" src="https://github.com/user-attachments/assets/0ba8d3cf-36cb-4b40-b5ab-10c48a7bcaff" />
+</br>
+</br>
+</br>
+</br>
+
+**5) `PBO` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZB03004_O01
@@ -238,7 +253,7 @@ ENDMODULE.
 </br>
 </br>
 
-**5) `PAI` 모듈 생성**
+**6) `PAI` 모듈 생성**
 ```abap
 *&---------------------------------------------------------------------*
 *& Include          MZB03004_I01
@@ -283,6 +298,34 @@ MODULE user_command_0110 INPUT.
   ENDCASE.
 ENDMODULE.
 ```
+</br>
+</br>
+</br>
+</br>
+
+**7) 결과 확인**
+
+- 첫 화면 (스크린 100)
+  
+<img width="436" height="184" alt="image" src="https://github.com/user-attachments/assets/450cb3a4-c027-487f-b5f5-8ac0a202afcb" />
+</br>
+</br>
+
+- 첫 화면에서 `MOVE` 버튼 클릭 시 (스크린 200)
+<img width="319" height="225" alt="image" src="https://github.com/user-attachments/assets/39e30e96-2e00-4ec3-8f0a-fadfe01b1e68" />
+</br>
+</br>
+
+- 스크린 100에서 비고 클릭 시
+  
+<img width="463" height="195" alt="image" src="https://github.com/user-attachments/assets/a81b7ded-e7b7-44d1-87fd-37e1a5967b33" />
+
+</br>
+</br>
+
+- 스크린 110 (Dialog)
+<img width="444" height="382" alt="image" src="https://github.com/user-attachments/assets/cb604364-9370-49a6-96ff-423db4dd8fd3" />
+
 </br>
 </br>
 </br>
