--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -82,6 +82,23 @@ SET CURSOR FIELD 'SDYN_CONN-CONNID'.
 </br>
 
 
+### 4) STARTING AT / ENDING AT
+- `CALL SCREEN` 과 함께 사용됨
+- `STARTING AT col row` : 화면의 왼쪽 위 시작 위치
+- `ENDING AT col row` : 화면의 오른쪽 아래 끝 위치
+- `col` = 열(X축), `row` = 행(Y축)
+```abap
+STARTING AT <column1> <row1>
+ENDING   AT <column2> <row2>
+```
+- (5,5) 위치에서 시작
+- (40,12)까지의 크기를 가진 팝업 화면 표시
+```abap
+CALL SCREEN 100
+  STARTING AT 5 5
+  ENDING AT 40 12.
+```
+</br>
 </br>
 </br>
 
