Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -1,2 +1,13 @@
-## Icon Field
+## , Icon Field >
+- SAP에서 제공하는 아이콘을 저장하기 위한 데이터 타입
+```abap
+DATA: <icon_field> TYPE ICONS-TEXT.
+```
+```abap
+DATA: iconfield1 TYPE ICONS-TEXT,
+      iconfield2 TYPE ICONS-TEXT.
+```
+</br>
+</br>
 
+### < `Icon Field` 를 이용한  예제 >
