Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -11,3 +11,8 @@ DATA: iconfield1 TYPE ICONS-TEXT,
 </br>
 
 ### < `Icon Field` 를 이용한  예제 >
+**1) `Icon` 이용한 Layout 설정**
+
+<img width="541" height="500" alt="image" src="https://github.com/user-attachments/assets/93017b3d-facf-40a3-806e-7aa830caa00a" />
+</br>
+</br>
