Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -18,3 +18,32 @@ DATA: iconfield1 TYPE ICONS-TEXT,
 <img width="541" height="500" alt="image" src="https://github.com/user-attachments/assets/93017b3d-facf-40a3-806e-7aa830caa00a" />
 </br>
 </br>
+</br>
+
+**2) 100 Screen 모듈 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE SET_ICONS.
+ MODULE CLEAR_OK_CODE.
+*
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+```
+</br>
+</br>
+
+**3) `TOP` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include MZB03004_TOP                             - Module Pool      SAPMZB03004
+*&---------------------------------------------------------------------*
+PROGRAM SAPMZB03004.
+
+DATA: gs_flight TYPE sflight.
+DATA: OK_CODE TYPE sy-ucomm.
+
+DATA: gv_button TYPE I,
+      ICONFIELD1 TYPE ICONS-TEXT,
+      ICONFIELD2 TYPE ICONS-TEXT.
+```
