--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -47,3 +47,157 @@ DATA: gv_button TYPE I,
       ICONFIELD1 TYPE ICONS-TEXT,
       ICONFIELD2 TYPE ICONS-TEXT.
 ```
+</br>
+</br>
+
+**4) `F01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03004_F01
+*&---------------------------------------------------------------------*
+
+
+FORM set_icon USING icon_name
+              CHANGING icon_result.
+  CALL FUNCTION 'ICON_CREATE'
+    EXPORTING
+      name = icon_name
+    IMPORTING
+      RESULT                      = icon_result
+    EXCEPTIONS
+      ICON_NOT_FOUND              = 1
+      OUTPUTFIELD_TOO_SHORT       = 2
+      OTHERS                      = 3
+    .
+  IF sy-subrc <> 0.
+    MESSAGE 'Error' TYPE 'E'.
+  ENDIF.
+ENDFORM.
+```
+</br>
+</br>
+
+**5) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03004_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BTN01'.
+      IF gv_button = 1.
+        gv_button = 0.
+      ELSE.
+        gv_button = 1.
+      ENDIF.
+    WHEN 'ICON'.
+      IF gv_button = 1.
+        gv_button = 0.
+      ELSE.
+        gv_button = 1.
+      ENDIF.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT' OR 'CANCEL'.
+      LEAVE PROGRAM.
+    WHEN 'MOVE'.
+      SET SCREEN 200.
+      LEAVE SCREEN.
+      " LEAVE TO SCREEN 200. 과 동일
+    WHEN 'REMARK'.
+*      MESSAGE 'Remark 메뉴 선택' TYPE 'I'.
+      CALL SCREEN 110
+      STARTING AT 5 5
+      ENDING AT 50 10.
+    WHEN OTHERS.
+  ENDCASE.
+
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0110  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0110 INPUT.
+  CASE OK_CODE.
+    WHEN 'OK'.
+      MESSAGE 'OK 클릭' TYPE 'I'.
+    WHEN 'CLOSE'.
+      MESSAGE 'CLOSE 클릭' TYPE 'I'.
+    WHEN 'DISP'.
+      MESSAGE 'DISP 클릭' TYPE 'I'.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+</br>
+
+**6) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZB03004_O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100' WITH sy-dynnr.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module CLEAR_OK_CODE OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE clear_ok_code OUTPUT.
+  CLEAR: OK_CODE.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module STATUS_0200 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0200 OUTPUT.
+ SET PF-STATUS 'S200'.
+ SET TITLEBAR 'T100' WITH sy-dynnr.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module STATUS_0110 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0110 OUTPUT.
+ SET PF-STATUS 'S110'.
+ SET TITLEBAR 'T100' WITH sy-dynnr.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module SET_ICONS OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE set_icons OUTPUT.
+
+  PERFORM set_icon USING 'ICON_CHANGE' CHANGING ICONFIELD2.
+
+  IF gv_button = 1.
+    PERFORM set_icon USING 'ICON_SYSTEM_OKAY' CHANGING ICONFIELD1.
+  ELSE.
+    PERFORM set_icon USING 'ICON_DISPLAY' CHANGING ICONFIELD1.
+  ENDIF.
+
+ENDMODULE.
+```
+</br>
+</br>
+
+**7) 결과 확인**
+
+<img width="538" height="443" alt="image" src="https://github.com/user-attachments/assets/ed54eb70-b443-4760-a6f8-5a003bf65f0e" />
