Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -214,3 +214,14 @@ ENDMODULE.
 ## < 실습 코드 >
 
 ### 실습 1
+</br>
+
+- 문제
+
+<img width="453" height="294" alt="image" src="https://github.com/user-attachments/assets/343c3b1a-33c2-4845-9ab1-faaf80c25e02" />
+</br>
+
+**1) Screen 100 `Layout` 설정**
+- `Foreign Key Check` 해제해야 오류 Message 가 안뜸
+  
+<img width="550" height="506" alt="image" src="https://github.com/user-attachments/assets/d4b1fba2-bbd3-4d9f-93d9-35b6a8e85b0c" />
