Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -229,6 +229,7 @@ ENDMODULE.
 <img width="550" height="506" alt="image" src="https://github.com/user-attachments/assets/d4b1fba2-bbd3-4d9f-93d9-35b6a8e85b0c" />
 </br>
 </br>
+</br>
 
 **2) `TOP` 모듈 생성**
 ```abap
@@ -247,4 +248,87 @@ DATA: OK_CODE TYPE sy-ucomm,
 </br>
 </br>
 
-**2) `TOP` 모듈 생성**
+**3) `F01` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZPRACTICE04B03_F01
+*&---------------------------------------------------------------------*
+
+FORM set_icons USING icon_name CHANGING icon_result.
+  CALL FUNCTION 'ICON_CREATE'
+    EXPORTING
+      name                        = icon_name
+    IMPORTING
+      RESULT                      = icon_result
+    EXCEPTIONS
+      ICON_NOT_FOUND              = 1
+      OUTPUTFIELD_TOO_SHORT       = 2
+      OTHERS                      = 3
+             .
+    IF sy-subrc <> 0.
+      MESSAGE 'Error' TYPE 'E'.
+    ENDIF.
+ENDFORM.
+```
+</br>
+</br>
+
+**4) `PAI` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZPRACTICE04B03_I01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*&      Module  USER_COMMAND_0100  INPUT
+*&---------------------------------------------------------------------*
+*       text
+*----------------------------------------------------------------------*
+MODULE user_command_0100 INPUT.
+  IF OK_CODE = 'BTN01'.
+    SELECT SINGLE * FROM SPFLI
+      INTO CORRESPONDING FIELDS OF gs_spfli
+      WHERE carrid = SDYN_CONN-carrid
+        AND connid = SDYN_CONN-connid.
+    IF sy-subrc <> 0.
+      gv_subrc = 4.
+    ELSE.
+      gv_subrc = 1.
+    ENDIF.
+  ENDIF.
+ENDMODULE.
+```
+</br>
+</br>
+
+**5) `PBO` 모듈 생성**
+```abap
+*&---------------------------------------------------------------------*
+*& Include          MZPRACTICE04B03_O01
+*&---------------------------------------------------------------------*
+*&---------------------------------------------------------------------*
+*& Module STATUS_0100 OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE status_0100 OUTPUT.
+  IF gv_subrc = 4.
+    PERFORM set_icons USING 'ICON_LED_RED' CHANGING ICONFIELD01.
+  ELSEIF gv_subrc = 1.
+    PERFORM set_icons USING 'ICON_LED_GREEN' CHANGING ICONFIELD01.
+  ENDIF.
+ENDMODULE.
+*&---------------------------------------------------------------------*
+*& Module CLEAR_OK_CODE OUTPUT
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+MODULE clear_ok_code OUTPUT.
+  CLEAR: OK_CODE.
+ENDMODULE.
+```
+</br>
+</br>
+
+**6) 결과 확인**
+
+<img width="314" height="284" alt="image" src="https://github.com/user-attachments/assets/9cc57410-24da-4d26-a7b8-de86f9cbafa9" />
