--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -9,6 +9,16 @@ DATA: iconfield1 TYPE ICONS-TEXT,
 ```
 </br>
 </br>
+</br>
+
+
+### < `ICON_CREATE` 함수 불러오기 >
+- `Pattern` 을 통해 가져오기
+  
+<img width="622" height="391" alt="image" src="https://github.com/user-attachments/assets/ba885de6-4761-440d-bf23-c890d700720d" />
+
+</br>
+</br>
 
 ### < Icon Field 를 이용한  예제 >
 </br>
