Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -251,6 +251,30 @@ ENDMODULE.
 </br>
 </br>
 
+### 2) 라디오버튼 및 체크박스 ( Radio button / Check box )
+
+- 라디오 버튼끼리 그룹 지정 가능
+- 그룹 지정시 라디오버튼을 그룹 중 하나만 선택 가능하게 됨
+  
+<img width="1057" height="656" alt="image" src="https://github.com/user-attachments/assets/5e908ecf-ff2d-4cb0-983f-365de9f523f0" />
+</br>
+</br>
+
+- 라디오 버튼끼리 그룹 지정 시 하나만 펑션코드 설정하면 됨
+<img width="696" height="356" alt="image" src="https://github.com/user-attachments/assets/d7e18577-96db-4a89-8d98-4e2f119d5dd2" />
+
+</br>
+</br>
+
+### 3) 버튼의 아이콘 지정
+- 버튼에 아이콘을 같이 띄울 수 있음
+<img width="699" height="434" alt="image" src="https://github.com/user-attachments/assets/ec5b76f3-e4e2-413f-94d2-9006dc726313" />
+
+</br>
+</br>
+</br>
+</br>
+
 ---
 
 </br>
