Update 프로그래밍 전용 웹 스크린 개발(12.16).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.16).md
@@ -406,3 +406,18 @@ ENDMODULE.
 **6) 결과 확인**
 
 <img width="314" height="284" alt="image" src="https://github.com/user-attachments/assets/9cc57410-24da-4d26-a7b8-de86f9cbafa9" />
+</br>
+</br>
+</br>
+</br>
+
+### 실습 2
+- 라디오버튼 활용 실습
+- 타이틀 변경 실습 (titlebar)
+
+
+**1) Screen 100 `Layout` 설정**
+- screen 100 `Layout` 설정
+<img width="738" height="307" alt="image" src="https://github.com/user-attachments/assets/17c29bf5-c52d-48cb-a710-43ddc3b44549" />
+</br>
+</br>
